WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258793
REGRESSION (
265125@main
): Crash WebKit: std::__1::__throw_bad_optional_access from sendSync
https://bugs.webkit.org/show_bug.cgi?id=258793
Summary
REGRESSION (265125@main): Crash WebKit: std::__1::__throw_bad_optional_access...
Gerald Squelart
Reported
2023-07-02 23:53:59 PDT
<
rdar://111444264
> Connection::sendSyncMessage() may actually return a null decoder with a NoError, which leads callers to think that the call succeeded, but in fact it didn't and there is no value to read.
Attachments
Add attachment
proposed patch, testcase, etc.
Gerald Squelart
Comment 1
2023-07-03 00:02:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15493
EWS
Comment 2
2023-07-03 14:29:52 PDT
Committed
265736@main
(660682ad1542): <
https://commits.webkit.org/265736@main
> Reviewed commits have been landed. Closing PR #15493 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug