Connection::sendSyncMessage changes NoError to Unspecified if there is no decoder https://bugs.webkit.org/show_bug.cgi?id=258793 rdar://111444264

Reviewed by Kimmo Kinnunen.

If sendSyncMessage return a null decoder along with NoError, callers may think the call succeeded and try to access the return value, which is actually an empty optional.

* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::sendSyncMessage):

Canonical link: https://commits.webkit.org/265736@main